--- a/atividade-hooks/src/App.css
+++ b/atividade-hooks/src/App.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+html, body, #root {
+  max-height: 100vh;
+  max-width: 100vw;
+  width: 100%;
+  height: 100%;
+}
+
 *, button, input {
   font-family: 'Poppins', 'sans-serif';
 }
