--- a/atividade-hooks/src/containers/LoginPage/styles.css
+++ b/atividade-hooks/src/containers/LoginPage/styles.css
@@ -5,12 +5,13 @@
   }
   
   html,
-  body {
+  body,
+  section {
     height: 100vh;
   }
   
   body {
-    background-color: #88efc8;
+    background-color: #6c63ff;
   }
   
   section {
@@ -24,6 +25,7 @@
     font-size: 32px;
     letter-spacing: 1px;
     margin: 20px 0;
+    color: #fff;
   }
   
   form {
@@ -39,7 +41,8 @@
   
   form .input-block label {
     font-size: 14px;
-    color: darkslateblue;
+    color:#6c63ff;
+    font-weight: 600;
   }
   
   form .input-block input {
@@ -48,23 +51,24 @@
     margin-top: 8px;
     padding: 7px;
     font-size: 16px;
-    color: #7159c1;
+    color: #6c63ff;
     border-radius: 2px;
     border: 1px solid #ccddef;
-    outline-color: #7159c1;
+    outline-color: #6c63ff;
   }
   
   form .btn-login {
     display: block;
+    margin: auto;
     padding: 15px 40px;
-    background: #6c63ff;
-    color: #fff;
+    max-width: 140px;
+    background: #88efc8;
+    color: #2F2E41;
     font-weight: 700;
     letter-spacing: 1px;
     border-radius: 6px;
     outline: none;
     text-decoration: none;
-    margin: auto;
   }
   
   /* APARIÇÃO DO FORM */
@@ -117,45 +121,6 @@
     animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
   }
   
-  @keyframes down {
-    from {
-      transform: translateY(0);
-    }
-    to {
-      transform: translateY(100vh);
-    }
-  }
-  
+
   /* FORM NO-NO */
   
-  form.validate-error {
-    animation: nono 200ms linear, fade paused;
-    animation-iteration-count: 2;
-  }
-  
-  @keyframes nono {
-    0%,
-    100% {
-      transform: translateX(0);
-    }
-    35% {
-      transform: translateX(-15%);
-    }
-    70% {
-      transform: translateX(15%);
-    }
-  }
-  
-  
-  @keyframes up {
-    from {
-      opacity: 0;
-      transform: translateY(0);
-    }
-    50% {
-      opacity: 1;
-    }
-    to {
-      transform: translateY(-800px) rotate(960deg);
-    }
-  }
