finalização do projeto gleidin 2.0

--- a/atividade-hooks/src/containers/NotFoundPage/styles.css
+++ b/atividade-hooks/src/containers/NotFoundPage/styles.css
@@ -27,7 +27,6 @@ body {
 }
 
 .wrapper h4 {
-    margin: 40px 20px;
     font-size: 1.2rem;
     color: #fff;
 }
@@ -42,4 +41,5 @@ body {
     border-radius: 6px;
     outline: none;
     text-decoration: none;
+    margin: auto;
 }
